# infusorium

./: .gitignore  CMakeLists.txt  README.md  aquarium.pro  infusorium.pro
src/: CMakeLists.txt  qml.qrc
src/core/: Application.cpp  Application.h  Utils.cpp  Utils.h
src/cpp/: Process.cpp  Process.h  app.h  main.cpp  process.cpp  process.h
src/cpp/global/: app.h  settings.cpp  settings.h  utils.cpp  utils.h
src/cpp/net/: Net.cpp  net.cpp  net.h
src/database/: Database.cpp  Database.h  Migrater.cpp  Migrater.h
src/js/: dialog.js  files.js  infu-proto.js  infu-rpc.js  settings.js  utils.js
src/qml/: main.qml
src/qml/components/: BrowseButton.qml  ButtonBase.qml  WindowDialog.qml
src/qml/components/filedialog/: FileDialogBase.qml  FileDialogDirectory.qml  FileDialogOpen.qml
src/qml/components/messagedialog/: MessageDialogBase.qml  MessageDialogError.qml  MessageDialogInformation.qml  MessageDialogQuestion.qml  MessageDialogWarning.qml
src/qml/infusoria/: InfusoriaConsole.qml  NewInfusoria.qml
src/qml/main/: About.qml  Connect.qml  Logger.qml  MainMenu.qml  Options.qml  WorkArea.qml
src/qml/unit/: NewUnit.qml
src/settings/: Settings.cpp  Settings.h
src/ui/: Dashboard.cpp  Dashboard.h  MainWindow.cpp  MainWindow.h  RecentFilesMenu.cpp  RecentWorldsMenu.cpp  RecentWorldsMenu.h  WorldController.cpp  WorldController.h
src/ui/dialog/: NewWorld.cpp  NewWorld.h  Preferences.cpp  Preferences.h
src/ui/widget/: AutoSlider.cpp  AutoSlider.h  AutomaticSlider.cpp  AutomaticSlider.h  BrowseLayout.cpp
src/world/: World.cpp  World.h
